History of jquery.pyproxy
=========================

0.3 (unreleased)
----------------

- Nothing changed yet.


0.2 (2010-10-22)
----------------

- renamed django.py in jq_django.py as it was giving conflicts when
  importing HttpResponse. [vincent]

- moved jquery.pyproxy.js in a folder called 'media' so it can be used
  easily by django user with django-appmedia. Also added some
  registration for plone users so jquery.pyproxy appears in the
  quick_installer and automatically adds the JS file to the
  jsregistry. [vincent]

- bugfix: fadeOut and fadeIn did not have correct names in
  plugins/jq_effects. [vincent]

- Added 'PreventDefault' in make_call - using 'return false' works for
  links but is not enough for submit buttons. [vincent]


0.1 (2010-04-19)
----------------

- bugfix in base: package_contents did not work with python
  2.4. [vincent]

- renamed jquerypyproxy in jquery.pyproxy [vincent]

- bugfix in base: the grammar was not passed to the objects
  created. [vincent] 

- bugfix in base: str.endswith(tuple) only works in python 2.5+, added
  a custom endswith. [vincent]

- bugfix in plone.py: typo in the class name. [vincent]

- added append in grammar. [vincent]

- added basic javascript calls. [vincent]

- added JQueryProxy Python class and decorators for plone and
  Django. [vincent]

- added log file + python egg. [vincent]
